--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>
       RPS GAME
     </title>
-    <link rel="stylesheet" href="okay.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <p class="headingg"> ROCK PAPER SCISSORS</p>
@@ -65,7 +65,7 @@
     
     'class="reset-score-button">Reset score</button>
     
-    <script src="10-rock-paper-scissors.js"></script>
+    <script src="index.js"></script>
 
   </body>
 </html>
